fix model, database connection
